Closed Bug 1367720 Opened 7 years ago Closed 7 years ago

Drag and drop of files on the browser window is broken

Categories

(Core :: DOM: Copy & Paste and Drag & Drop, defect)

All
macOS
defect
Not set
major

Tracking

()

VERIFIED FIXED
mozilla55
Tracking Status
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- verified
firefox55 --- verified

People

(Reporter: flod, Assigned: spohl)

References

Details

(Keywords: regression)

Attachments

(1 file)

Take for example https://tinypng.com/ or Google Drive: drag and drop of files doesn't work anymore.

It should be a recent regression, since I've used it on Google Drive just a couple of days ago.

55.0a1 (2017-05-24) (64 bit)
Trying to identify the regression range with mozregression.
Component: Untriaged → Drag and Drop
Product: Firefox → Core
Version: unspecified → Trunk
 4:56.46 INFO: No more inbound revisions, bisection finished.
 4:56.46 INFO: Last good revision: 5bc1c758ab57c1885dceab4e7837e58af27b998c
 4:56.46 INFO: First bad revision: 4f874bc1e42463e30bc5595e84e5aaa450d81167
 4:56.46 INFO: Pushlog:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=5bc1c758ab57c1885dceab4e7837e58af27b998c&tochange=4f874bc1e42463e30bc5595e84e5aaa450d81167

Several bugs mention Drag and Drop on OS X. 

@sphol
Can it be one of your bugs?
Flags: needinfo?(spohl.mozilla.bugs)
Looking into it. Thanks for filing!
Flags: needinfo?(spohl.mozilla.bugs)
I also see this issue on Mac OS X 10.12 - I can not drag a local file from my Desktop and drop it over the Tabs bar. 

I can't reproduce this issue on Windows 10 x64 or Ubuntu 16.04.
OS: Unspecified → Mac OS X
Hardware: Unspecified → All
Assignee: nobody → spohl.mozilla.bugs
Status: NEW → ASSIGNED
Attached patch Patch β€” β€” Splinter Review
In an early version of patch 2 in bug 1358075, I tried to replace kUTTypeFileURL with other types to get a better understanding of our drag & drop code[1]. Unfortunately, the final version of the patch still replaced one case of kUTTypeFileURL with NSFilenamesPboardType, which was a mistake. Furthermore, bug 1330470 replaced NSFilenamesPboardType with kMozFileUrlsPboardType, which obscured this regression further[2].

This patch restores proper functionality.

[1] https://hg.mozilla.org/mozilla-central/rev/c45eb8e4d71a#l4.152
[2] https://hg.mozilla.org/mozilla-central/rev/d0aad1d6b4ac#l4.77
Attachment #8871278 - Flags: review?(mstange)
Comment on attachment 8871278 [details] [diff] [review]
Patch

Approval Request Comment
[Feature/Bug causing the regression]: bug 1358075
[User impact if declined]: Dragging files from Finder to Firefox will fail.
[Is this code covered by automated tests?]: no
[Has the fix been verified in Nightly?]: not yet
[Needs manual test from QE? If yes, steps to reproduce]: yes
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: no
[Why is the change risky/not risky?]: The patch is one line of code that fixes an obvious oversight in patch 2 of bug 1358075.
[String changes made/needed]: none
Attachment #8871278 - Flags: approval-mozilla-beta?
Attachment #8871278 - Flags: review?(mstange) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/d823769f19bbdd8484e3fd4fa27eaa45400c208c
Bug 1367720: Restore ability to drag & drop files from Finder to Firefox. r=mstange
https://hg.mozilla.org/mozilla-central/rev/d823769f19bb
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Verified as fixed on latest Nightly 55.0a1, build ID 20170526030203 on Mac OS X 10.12.
Status: RESOLVED → VERIFIED
Comment on attachment 8871278 [details] [diff] [review]
Patch

fix regression from bug 1358075, beta54+
Attachment #8871278 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
(In reply to Stephen A Pohl [:spohl] from comment #6)
> [List of other uplifts needed for the feature/fix]: none

Note that this assumed that bug 1358075, bug 1330470 and bug 1361116 would be uplifted by the time this got approved for uplift. This patch depends on these three bugs being uplifted first. Thanks!
https://hg.mozilla.org/releases/mozilla-beta/rev/dc8fbad0237c
Flags: qe-verify+
I've managed to reproduce this issue on Google Drive, with an affected build (Nightly 55.0a1, 2017-05-25).

This is also verified fixed on 54.0 (2017-06-05), running Mac OS X 10.11.6.
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: