Bug 1367720 - Restore ability to drag & drop files from Finder to Firefox. r=mstange, a=jcristau